codex-rs/tui/src/snapshots/codex_tui__startup_draft__tests__terminal_app_ssh_startup.snap
---
source: tui/src/startup_draft_tests.rs
expression: "normalize_cli_version(frames.join(\"\\n---\\n\"))"
---
terminal_app_over_ssh=false, owned=true
╭───────────────────────────────────────╮
│ >_ OpenAI Codex (v<VERSION>)          │
│                                       │
│ model:     loading   /model to change │
│ directory: loading                    │
╰───────────────────────────────────────╯

  Pull up a prompt.





› Ask Codex to do anything

  ? for shortcuts
---
terminal_app_over_ssh=true, owned=false
╭───────────────────────────────────────╮
│ >_ OpenAI Codex (v<VERSION>)          │
│                                       │
│ model:     loading   /model to change │
│ directory: loading                    │
╰───────────────────────────────────────╯

  Pull up a prompt.


› Ask Codex to do anything

  ? for shortcuts
